--- a/index.html
+++ b/index.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
+  <html lang="en" >
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Sustainability project</title>
   <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
-<html>
-    <head> 
-        <title>Sustainability Project</title>
-        <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     </head>
-    <body>
-        <div class="navbar">
-            <a href="#newmodel">New Model</a>
-            <a href="#compare">Compare</a>
-            <div class="dropdown">
-              <button class="dropbtn">Clothing Solutions
-                <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-content">
-                <a href="#">BAM Clothing</a>
-                <a href="#">Hemp Clothing</a>
-                <a href="#">Other Solutions</a>
+<body>
+<div class="navbar">
+  <a href="index.html"> Home </a>
+  <a href="#newmodel">New Model</a>
+  <a href="compare.html">Compare</a>
+  <div class="dropdown">
+    <button class="dropbtn">Clothing Solutions
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">BAM Clothing</a>
+      <a href="#">Hemp Clothing</a>
+      <a href="#">Other Solutions</a>
               </div>
             </div>
           </div>
-          <div>
-            <h1>The New Textile Economy</h1>
+    <div>
+      <h1>The New Textile Economy</h1>
           </div>
           <div>
             <img src="bamboo.jpg" alt="Bamboo" width="375" height="250">
