--- a/compare.html
+++ b/compare.html
@@ -73,19 +73,19 @@
 
 
         <div class = "bambooButton">
-          <button onclick= "toggle(Bamboo)" class="Button"> Bamboo </button>
+          <button onclick= "reveal(Bamboo)" class="Button"> Bamboo </button>
         </div>
 
         <div class = "hempButton"> 
-          <button onclick="toggle(Hemp)" class="Button"> Hemp </button>
+          <button onclick="reveal(Hemp)" class="Button"> Hemp </button>
         </div>
 
         <div class = "corkButton"> 
-          <button onclick="toggle(Cork)" class="Button"> Cork </button>
+          <button onclick="reveal(Cork)" class="Button"> Cork </button>
         </div>
 
         <div class = "cottonButton"> 
-          <button onclick="toggle(Cotton)" class="Button"> Cotton </button>
+          <button onclick="reveal(Cotton)" class="Button"> Cotton </button>
         </div>
 
          
